--- a/Progetto_Finale/index.html
+++ b/Progetto_Finale/index.html
@@ -60,6 +60,7 @@
     </div>
     <!-- Loading the libraries -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r58/three.js"></script>
     <script src="assets/libs/three.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.min.js"></script>
@@ -71,14 +72,16 @@
     <script src="assets/libs/PointerLockControls.js"></script>
     <script src="assets/libs/PathControls.js"></script>
     <script src="assets/libs/TrackballControls.js"></script>
+    <script type="text/javascript" src="assets/fonts/helvetiker_regular.typeface.js"></script> 
 
     <!-- Loading my files -->
     <script src="scripts/funzioni.js"></script>
+    <script src="scripts/aereo.js"></script>
+    <script src="scripts/porte_e_finestre.js"></script>
     <script src="scripts/spazzatura.js"></script>
     <script src="scripts/luci.js"></script>
     <script src="scripts/pointerlock.js"></script>
     <script src="scripts/init.js"></script>
-    <script src="scripts/albero.js"></script>
     <script src="scripts/palazzo.js"></script>
     <script src="scripts/cameraGenitori.js"></script>
     <script src="scripts/cameraMia.js"></script>
